--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -1,15 +1,14 @@
 // Customize the colors of Octoflat Here
 
 $primary-color:      #e69411; // Jumbotron, Horizontal Rules, Headings
-$secondary-color:    #1dbbd6; // Tags, Links, Main Heading, Quote Border
-$tertiary-color:     #C0392B; // Hover-over color, Active Page color
-$accent-color1:      #23defe; // Hover-over background color for tags
+$secondary-color:    #f39c12; // Tags, Links, Main Heading, Quote Border
+$tertiary-color:     #f6d655; // Hover-over color, Active Page color
+$accent-color1:      #e67e22; // Hover-over background color for tags
 $accent-color2:      #34495E; // Sub-headings, Date Stamp
 $accent-color3:      #ffffff; // Navbar Text, Tag text
 $bg-color:           #ffffff; // Background
-$navbar-color:       #1ec2de; // Navbar
+$navbar-color:       #d35400; // Navbar
 $code-bg-color:      #2C3E50; // Code background
-$quote-color:        #E74C3C; // Quote Color
+$quote-color:        #C0392b; // Quote Color
 $text-color:         #5a5e5f; // Body Text
 $footer-color:       #7F8C8D; // Footer
-
