--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,4 +1,5 @@
-<p>
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} - <a href="{{ root_url }}/politica-de-cookies">Política de Cookies</a> -
+<p align="center">
+  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.es_ES"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> - {{ site.time | date: "%Y" }} - {{ site.author }} - <a href="{{ root_url }}/politica-de-cookies">Política de Cookies</a>
+</br>
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span> and <a href="http://alexgaribay.com">Octoflat</a>
 </p>
